crates/rspyts-macros/tests/ui/method_named_free.stderr
error: bridged member `free` projects to `free`, which collides with generated TypeScript class lifecycle member `free`; rename it or scope it to Python with `#[bridge(target = "python")]`
  --> tests/ui/method_named_free.rs:12:12
   |
12 |     pub fn free(&self) {}
   |            ^^^^

error: `constructor` does not apply to this item; it marks the constructor method inside a #[bridge] impl block
 --> tests/ui/method_named_free.rs:7:14
  |
7 |     #[bridge(constructor)]
  |              ^^^^^^^^^^^
